@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data and the Presentation of
         Analysis Results
-Version: 0.99.13
-Date: 2017-07-13
+Version: 0.99.13.2
+Date: 2017-07-29
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: One of the aims of this package is to make life easier for
@@ -17,7 +17,7 @@ Description: One of the aims of this package is to make life easier for
         estimates, which can be exported to 'LaTeX' and HTML.
 License: GPL-2
 LazyLoad: Yes
-Depends: R (>= 3.0.0), lattice, stats, methods, utils, MASS
+Depends: R (>= 3.4.0), lattice, stats, methods, utils, MASS
 Suggests: splines, knitr, rmarkdown, sandwich
 Enhances: AER, car, eha, lme4, ordinal, simex
 Imports: grid, repr
@@ -26,6 +26,6 @@ URL:
         http://www.elff.eu/software/memisc/,http://github.com/melff/memisc/
 BugReports: http://github.com/melff/memisc/issues
 NeedsCompilation: yes
-Packaged: 2017-07-15 23:39:19 UTC; elff
+Packaged: 2017-07-29 13:58:56 UTC; elff
 Repository: CRAN
-Date/Publication: 2017-07-17 10:51:25 UTC
+Date/Publication: 2017-07-29 17:42:52 UTC
