@@ -190,7 +190,7 @@ CONTROL' 'NEW DEAL' 'MARSHALL PLAN' 'FIRM RUSSIAN POLICY' 'HELP ISRAEL
 (PALESTINE)' 'PROMOTE PEACE'</code></pre>
 <pre class="r"><code>print(nes1948)</code></pre>
 <pre><code>
-SPSS portable file '/tmp/RtmpoMuv2g/file2a192debb1a/NES1948.POR' 
+SPSS portable file '/tmp/RtmpvUsVcY/file1acd4535057f/NES1948.POR' 
     with 67 variables and 662 observations</code></pre>
 <p>At this stage, the data are not loaded into the memory yet. But we can see which variables exist inside the data set:</p>
 <pre class="r"><code>names(nes1948)</code></pre>
